--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -51,7 +51,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      # ----- JOB 2: Desplegar en el Servidor (Gestionando Secretos + Git Sync) -----
+  # ----- JOB 2: Desplegar en el Servidor de Producción -----
   deploy:
     needs: build-and-push
     runs-on: ubuntu-latest
@@ -79,30 +79,40 @@ jobs:
             # --- End of Git Synchronization ---
 
             # --- Docker Secret Update Logic (Advanced Strategy) ---
-            echo "🔄 Creating temporary updated Docker secrets (_new)..."
-            docker secret rm db_user_new || true
-            # ... (resto de la creación de secretos _new) ...
+            echo "🔄 Creating updated Docker secrets..."
+            echo "${{ secrets.DB_USER }}" | docker secret create db_user_new -
+            echo "${{ secrets.DB_PASSWORD }}" | docker secret create db_password_new -
             echo "${{ secrets.DB_NAME }}" | docker secret create db_name_new -
-            echo "   Secrets _new created."
 
-            echo "🛠️ Temporarily updating docker-stack.yml on server to use _new secrets..."
-            # Modificar usando $STACK_FILE o directamente 'docker-stack.yml' ya que estamos en el dir correcto
-            sed -i.bak 's|source: db_user|source: db_user_new|g' "$STACK_FILE"
-            # ... (resto de los comandos sed) ...
-            sed -i 's|MYSQL_DATABASE_FILE: /run/secrets/db_name|MYSQL_DATABASE_FILE: /run/secrets/db_name_new|g' "$STACK_FILE"
-            echo "   docker-stack.yml modified to use _new secrets."
+            echo "🛠️ Updating docker-stack.yml to use new secrets..."
+            sed -i 's/db_user/db_user_new/g' ${STACK_FILE}
+            sed -i 's/db_password/db_password_new/g' ${STACK_FILE}
+            sed -i 's/db_name/db_name_new/g' ${STACK_FILE}
 
-            echo "🚀 Deploying Docker Stack with _new secrets..."
-            # Desplegar usando $STACK_FILE o directamente 'docker-stack.yml'
-            docker stack deploy --with-registry-auth -c "$STACK_FILE" suyay
-            echo "   First deployment initiated."
+            echo "🚀 Deploying Docker Stack with updated secrets..."
+            docker stack deploy --with-registry-auth -c ${STACK_FILE} suyay
 
-            # ... (resto del script: rm old, create original, revert sed, final deploy, rm _new) ...
+            echo "🧹 Removing old secrets..."
+            docker secret rm db_user || true
+            docker secret rm db_password || true
+            docker secret rm db_name || true
 
-            echo "🧽 Cleaning up temporary _new secrets..."
+            echo "✅ Renaming new secrets to original names..."
+            echo "${{ secrets.DB_USER }}" | docker secret create db_user -
+            echo "${{ secrets.DB_PASSWORD }}" | docker secret create db_password -
+            echo "${{ secrets.DB_NAME }}" | docker secret create db_name -
+
+            echo "📦 Reverting docker-stack.yml to original secret names..."
+            sed -i 's/db_user_new/db_user/g' ${STACK_FILE}
+            sed -i 's/db_password_new/db_password/g' ${STACK_FILE}
+            sed -i 's/db_name_new/db_name/g' ${STACK_FILE}
+
+            echo "🚀 Final redeploy with original secret names..."
+            docker stack deploy --with-registry-auth -c ${STACK_FILE} suyay
+
+            echo "🧽 Cleaning up temporary secrets..."
             docker secret rm db_user_new || true
             docker secret rm db_password_new || true
             docker secret rm db_name_new || true
-            echo "   Temporary secrets removed."
 
-            echo "🎉 Git repo synced, secrets updated, and stack redeployed successfully!"
+            echo "🎉 Secrets updated and redeployed successfully!!"
