--- a/my-apache-config.conf
+++ b/my-apache-config.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    ServerName app1.cardozo.com.ar
+    #ServerName app1.cardozo.com.ar
     DocumentRoot /var/www/html
 
     <Directory /var/www/html>
