--- a/my-apache-config.conf
+++ b/my-apache-config.conf
@@ -1,5 +1,6 @@
 <VirtualHost *:80>
-    #ServerName app1.cardozo.com.ar
+    # ServerName no es estrictamente necesario aquí cuando Traefik maneja el routing por Host.
+    # Podrías omitirlo o usar uno genérico si alguna herramienta interna lo requiere.
     DocumentRoot /var/www/html
 
     <Directory /var/www/html>
